namespace java com.twitter.auth.thrift.authresultcode
namespace py gen.twitter.auth.AuthResultCode
namespace rb AuthResultCode
namespace go AuthResultCode
#@namespace scala com.twitter.auth.authresultcode.thriftscala
#@namespace strato com.twitter.auth.authresultcode

enum AuthResultCode {
    OK = 0

    UNKNOWN_AUTH_TYPE = 400
    INTERNAL_SERVER_ERROR = 500
    NOT_IMPLEMENTED = 501
    SERVICE_UNAVAILABLE = 503

    /* 401 responses */
    BAD_USER_OR_PASS = 2010
    USER_BLOCKED = 2020

    BAD_ACCESS_TOKEN = 3010
    ORPHANED_ACCESS_TOKEN = 3011
    ACCESS_TOKEN_NOT_FOUND = 3012
    CLIENT_ACCESS_TOKEN_NOT_FOUND = 3013
    BAD_CLIENT_ACCESS_TOKEN = 3014
    BAD_CLIENT_KEY = 3030
    BAD_SIGNATURE = 3040
    DUPLICATE_NONCE = 3050
    TIMESTAMP_OUT_OF_RANGE = 3060
    CALLBACK_WITH_SESSION_AUTH_BLOCKED = 3070

    BAD_CLIENT_ID = 4030

    BAD_AUTH_TOKEN_COOKIE = 5010

    BAD_PARTNER_APPLICATION_ID = 6010
    PARTNER_ACCESS_TOKEN_INVALIDATED = 6020
    BAD_PARTNER_ACCESS_TOKEN = 6030

    AUTH_TYPE_HEADER_MISMATCH = 7010

    /* 403 responses */
    BAD_GUEST_TOKEN = 40300
    BAD_DEVICE_TOKEN = 40301
    CONTRIBUTORS_RELATIONSHIP_INVALID = 40302
    DEVICE_PIN_INVALID = 40303
    DEVICE_PIN_REQUIRED = 40304
    UNEXPECTED_DEVICE_PIN = 40305
    AUTH_TYPE_HEADER_MISSING = 40306
    CONTRIBUTORS_INDICATOR_INVALID = 40307
    CONTRIBUTORS_INDICATOR_UNEXPECTED = 40308
    AUTH_MULTI_COOKIE_MISSING = 40309
    AUTH_MULTI_NOT_FOUND_IN_COOKIE = 40310
    AUTH_MULTI_BAD_COOKIE = 40311
    AUTH_COOKIE_PARSER_UNEXPECTED = 40312
    AUTH_MULTI_NOT_ACCEPTED = 40313
    CONTRIBUTORS_NOT_ALLOWED = 40314
}
